--- a/4.Sistema/backend/src/main/resources/application-dev.properties
+++ b/4.Sistema/backend/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:postgresql://igor:5432/TakeOne
+spring.datasource.url=jdbc:postgresql://localhost:5432/PS_TakeOne
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=dewitt250799
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
